# orca

./: Dockerfile  Makefile  README.md  README.zh.md  config.example.yaml  langgraph.json  pyproject.toml
cli/: package.json
cli/src/: client.ts  config.ts  index.ts
cli/src/commands/: chat.ts  research.ts  serve.ts  skills.ts
docs/: API.md  ARCHITECTURE.md  SETUP.md
orca/: __init__.py
orca/agent/: __init__.py  graph.py  state.py
orca/agent/nodes/: __init__.py  research_agent.py  research_tool.py  route_to_research.py
orca/cli/: __init__.py  python_cli.py
orca/cli/commands/: __init__.py
orca/config/: __init__.py  orca_config.py
orca/gateway/: __init__.py  app.py
orca/gateway/routers/: __init__.py  research.py  skills_market.py
orca/llm/: __init__.py  service.py
orca/models/: __init__.py  citation.py  research.py  source.py
orca/prompts/: __init__.py  loader.py
orca/research/: __init__.py  engine.py
orca/research/sources/: __init__.py  alpha_xiv.py  arxiv.py  base.py  semantic_scholar.py  web_search.py
orca/research/subagents/: __init__.py  base.py  (+4 more)
orca/skills/: __init__.py  market.py  registry.py
prompts/: audit.md  compare.md  deepresearch.md  draft.md  eli5.md  jobs.md  lit.md  log.md  replicate.md  review.md  watch.md
skills/: registry.json
tests/: conftest.py  test_api.py  test_cli.py  test_config.py  test_e2e_stress.py  test_integration.py  test_llm_service.py  test_models.py  test_prompts.py  test_research_engine.py  test_skills.py  test_subagents.py  test_workflows.py
web/: package.json  tailwind.config.js
(+15 files in other folders)
