[project]
name = "orca"
version = "0.1.0"
description = "Orca - Omniscient Research Companion & Assistant (DeerFlow x Feynman Fusion)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "uvicorn[standard]>=0.34.0",
    "langgraph>=0.2.0",
    "langgraph-sdk>=0.1.51",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "pydantic>=2.0.0",
    "click>=8.0.0",
    "sse-starlette>=2.1.0",
    "python-multipart>=0.0.26",
    "arxiv>=2.1.0",
    "aiohttp>=3.9.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
]

[dependency-groups]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "ruff>=0.14.11", "httpx>=0.28.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py312"
